src/objects/Needle_Exchange__c.object
<CustomObject>
    <fields>
        <fullName>Alternative_Routes_Requested_N_A__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Alternative Routes Requested N/A</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Alternative_Routes__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Alternative Routes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Baby_Brown_Dispensed__c</fullName>
        <label>Baby Brown Dispensed</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Baby_Brown_Requested_N_A__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Baby Brown Requested N/A</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Baby_Brown_Returned__c</fullName>
        <label>Baby Brown Returned</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bins_Dispensed__c</fullName>
        <label>Bins Dispensed</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bins_Requested_N_A__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bins Requested N/A</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bins_Returned__c</fullName>
        <label>Bins Returned</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Blue_Dispensed__c</fullName>
        <label>Blue Dispensed</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Blue_Requested_N_A__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Blue Requested N/A</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Blue_Returned__c</fullName>
        <label>Blue Returned</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Blunt_Needle_Requested_N_A__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Blunt Needle Requested N/A</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Blunt_Needle__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Blunt Needle</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Brown_Dispensed__c</fullName>
        <label>Brown Dispensed</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Brown_Requested_N_A__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Brown Requested N/A</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Brown_Returned__c</fullName>
        <label>Brown Returned</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Citric_Card_Requested_N_A__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Citric Card Requested N/A</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Citric_Card__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Citric Card</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Citric_Dispensed__c</fullName>
        <label>Citric Dispensed</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Citric_Requested_N_A__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Citric Requested N/A</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cleaning_Works_Requested_N_A__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cleaning Works Requested N/A</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cleaning_Works__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cleaning Works</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <label>Client</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>You must select a client</errorMessage>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Client</value>
            </filterItems>
            <infoMessage>Showing only clients</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>NSP Interventions</relationshipLabel>
        <relationshipName>Needle_Syringe_Exchange</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Condoms_Dispensed__c</fullName>
        <label>Condoms Dispensed</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Condoms_Requested_N_A__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Condoms Requested N/A</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_Exchange__c</fullName>
        <label>Date of intervention</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Detox_Handbook_Requested_N_A__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Detox Handbook Requested N/A</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Detox_Handbook__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Detox Handbook</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Femoral_Injecting_Requested_N_A__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Femoral Injecting Requested N/A</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Femoral_Injecting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Femoral Injecting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Foil_x_20_Requested_NA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Foil x 20 Requested NA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Foil_x_20__c</fullName>
        <label>Foil x 20</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Foil_x_50_Requested_NA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Foil x 50 Requested NA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Foil_x_50__c</fullName>
        <label>Foil x 50</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Green_Dispensed__c</fullName>
        <label>Green Dispensed</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Green_Requested_N_A__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Green Requested N/A</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Green_Returned__c</fullName>
        <label>Green Returned</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Grey_Dispensed__c</fullName>
        <label>Grey Dispensed</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Grey_Returned_N_A__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Grey Requested N/A</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Grey_Returned__c</fullName>
        <label>Grey Returned</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Groin_Femoral_Injecting_Requested_N_A__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Groin - Femoral Injecting Requested N/A</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Groin_Femoral_Injecting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Groin - Femoral Injecting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hep_C_Requested_N_A__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hep C Requested N/A</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hep_C__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>this is something about hep c</inlineHelpText>
        <label>Hep C</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>How_Small_IsThe_Hep_CVirus_Requested_N_A__c</fullName>
        <defaultValue>false</defaultValue>
        <label>How Small IsThe Hep CVirus Requested N/A</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>How_Small_Is_The_Hep_C_Virus__c</fullName>
        <defaultValue>false</defaultValue>
        <label>How Small Is The Hep C Virus</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Injecting_Site_Care_Requested_N_A__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Injecting Site Care Requested N/A</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Injecting_Site_Care__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Injecting Site Care</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Interventions_Dispensed__c</fullName>
        <label>Interventions Dispensed</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interventions_Requested_N_A__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Interventions Requested N/A</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <picklist>
            <picklistValues>
                <fullName>Cavan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dublin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Laois</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Longford</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Louth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meath</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monaghan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Offaly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Westmeath</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Limerick</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Long_Orange_Dispensed__c</fullName>
        <inlineHelpText>Not the short needles</inlineHelpText>
        <label>Long Orange Dispensed</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Long_Orange_Requested_N_A__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Long Orange Requested N/A</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Long_Orange_Returned__c</fullName>
        <label>Long Orange Returned</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Methadone_Handbook_Requested_N_A__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Methadone Handbook Requested N/A</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Methadone_Handbook__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Methadone Handbook</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Non_Bins_Returned__c</fullName>
        <label>Non Bins Returned</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Orange_Dispensed__c</fullName>
        <label>Orange Dispensed</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Orange_Requested_N_A__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Orange Requested N/A</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Orange_Returned__c</fullName>
        <label>Orange Returned</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Overdose_Detox_Requested_N_A__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Overdose - Detox Requested N/A</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Overdose_Detox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Overdose - Detox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Overdose_General_Requested_N_A__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Overdose - General Requested N/A</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Overdose_General__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Overdose - General</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Overdose_Prevention_Requested_N_A__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Overdose Prevention Requested N/A</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Overdose_Prevention__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Overdose Prevention</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pipes_Dispensed__c</fullName>
        <label>Pipes Dispensed</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pipes_Requested_N_A__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pipes Requested N/A</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Paraphernalia_Info_Requested_N_A__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Paraphernalia Info Requested N/A</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Paraphernalia_Info__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Paraphernalia Info</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Referral__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Referral</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rehab_Handbook_Requested_N_A__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rehab Handbook Requested N/A</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rehab_Handbook__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rehab Handbook</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Safe_Disposal_Requested_N_A__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Safe Disposal Requested N/A</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Safe_Disposal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Safe Disposal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Safer_Injecting_General_Requested_N_A__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Safer Injecting - General Requested N/A</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Safer_Injecting_General__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Safer Injecting - General</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Safer_Injecting_Guide_MQI_Requested_N_A__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Safer Injecting Guide -MQI Requested N/A</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Safer_Injecting_Guide_MQI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Safer Injecting Guide - MQI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Safer_Injecting_Handbook_Requested_N_A__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Safer Injecting Handbook Requested N/A</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Safer_Injecting_Handbook__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Safer Injecting Handbook</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Secondary_Exchange_Requested_N_A__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Secondary Exchange Requested N/A</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Secondary_Exchange__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Secondary Exchange</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Secondary_Paraphernalia_Requested_N_A__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Secondary Paraphernalia Requested N/A</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Secondary_Paraphernalia__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Secondary Paraphrnalia</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Smoking_brown_leaflet_Requested_N_A__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Smoking brown leaflet Requested N/A</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Smoking_brown_leaflet__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Smoking brown leaflet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Stericups_Dispensed__c</fullName>
        <label>Stericups Dispensed</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stericups_Requested_N_A__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Stericups Requested N/A</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sub_location__c</fullName>
        <label>Sub-location</label>
        <picklist>
            <controllingField>Location__c</controllingField>
            <picklistValues>
                <fullName>Ardee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drogheda (North)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drogheda (South)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drogheda (LCDAT)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dundalk (Bridge Street)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dundalk (North)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dundalk (Simon)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dundalk (South)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ashbourne</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Navan (Fair Green)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Navan (North)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Navan (South)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nobber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oldcastle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trim</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Athboy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duleek</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dunshaughlin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kells</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bailieborough</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bailieborough (CDA)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ballivor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ballyhaise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ballyjamesduff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bettystown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cavan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cavan (CDA)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cootehill</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kingscourt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Limerick City</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Swabs_Dispensed__c</fullName>
        <label>Swabs Dispensed</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Swabs_Requested_N_A__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Swabs Requested N/A</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tooters_Dispensed__c</fullName>
        <label>Tooters Dispensed</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tooters_Requested_N_A__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tooters Requested N/A</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Dispensed__c</fullName>
        <formula>Total_Needles_Dispensed__c + Total_Syringes_Dispensed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Dispensed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Needles_Dispensed__c</fullName>
        <formula>Baby_Brown_Dispensed__c + Blue_Dispensed__c + Brown_Dispensed__c + Green_Dispensed__c + Orange_Dispensed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Needles Dispensed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Needles_Returned__c</fullName>
        <formula>Baby_Brown_Returned__c + Blue_Returned__c + Brown_Returned__c + Green_Returned__c + Orange_Returned__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Needles Returned</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Syringes_Dispensed__c</fullName>
        <formula>X1ml_Omnifix_Dispensed__c + X2ml_Syringe_Dispensed__c + X5ml_Syringe_Dispensed__c + X2ml_Never_Share_Syringe_Dispensed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Syringes Dispensed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Syringes_Returned__c</fullName>
        <formula>X1ml_Omnifix_Returned__c + X2ml_Syringe_Returned__c + X5ml_Syringe_Returned__c + X2ml_Never_Share_Syringe_Returned__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Syringes Returned</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tourniquet_Dispensed__c</fullName>
        <label>Tourniquet Dispensed</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tourniquet_Requested_N_A__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tourniquet Requested N/A</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Use_Your_Head_Requested_N_A__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Your Head Requested N/A</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Use_Your_Head__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Your Head</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vein_care_Requested_N_A__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Vein care Requested N/A</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vein_care__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Vein care</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VitC_Card_Requested_N_A__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VitC Card Requested N/A</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VitC_Card__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VitC Card</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vit_C_Dispensed__c</fullName>
        <label>Vit C Dispensed</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vit_C_Requested_N_A__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Vit C Requested N/A</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Water_Dispensed__c</fullName>
        <label>Water Dispensed</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Water_Requested_N_A__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Water Requested N/A</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>What_s_The_Story_Requested_N_A__c</fullName>
        <defaultValue>false</defaultValue>
        <label>What&apos;s The Story? Requested N/A</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>What_s_The_Story__c</fullName>
        <defaultValue>false</defaultValue>
        <label>What&apos;s The Story?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>When_Things_Go_Wrong_Requested_N_A__c</fullName>
        <defaultValue>false</defaultValue>
        <label>When Things Go Wrong Requested N/A</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>When_Things_Go_Wrong__c</fullName>
        <defaultValue>false</defaultValue>
        <label>When Things Go Wrong</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X1Ml_Low_Dead_Space__c</fullName>
        <label>1ml Low Dead Space Dispensed</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X1ml_Diabetic_Dispensed__c</fullName>
        <label>1ml Diabetic Dispensed</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X1ml_Diabetic_Requested_N_A__c</fullName>
        <defaultValue>false</defaultValue>
        <label>1ml Diabetic Requested N/A</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X1ml_Diabetic_Returned__c</fullName>
        <label>1ml Diabetic Returned</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X1ml_Filter_Dispensed__c</fullName>
        <label>1ml Filter Dispensed</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X1ml_Filter_Requested_N_A__c</fullName>
        <defaultValue>false</defaultValue>
        <label>1ml Filter Requested N/A</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X1ml_Filter_Returned__c</fullName>
        <label>1ml Filter Returned</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X1ml_Low_Dead_Space_Requested__c</fullName>
        <defaultValue>false</defaultValue>
        <label>1ml Low Dead Space Requested N/A</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X1ml_Low_Dead_Space_Returned__c</fullName>
        <label>1ml Low Dead Space Returned</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X1ml_Nevershare_Dispensed__c</fullName>
        <label>1ml Nevershare Dispensed</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X1ml_Nevershare_Requested_N_A__c</fullName>
        <defaultValue>false</defaultValue>
        <label>1ml Nevershare Requested N/A</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X1ml_Nevershare_Returned__c</fullName>
        <label>1ml Nevershare Returned</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X1ml_Omnifix_Dispensed__c</fullName>
        <label>1ml Omnifix Dispensed</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X1ml_Omnifix_Requested_N_A__c</fullName>
        <defaultValue>false</defaultValue>
        <label>1ml Omnifix Requested N/A</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X1ml_Omnifix_Returned__c</fullName>
        <label>1ml Omnifix Returned</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X1ml_Saline_Requested_N_A__c</fullName>
        <defaultValue>false</defaultValue>
        <label>1ml Saline Requested N/A</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X1ml_Saline__c</fullName>
        <label>1ml Saline</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2ml_Green_Dispensed__c</fullName>
        <label>2ml Green Dispensed</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2ml_Green_Requested_N_A__c</fullName>
        <defaultValue>false</defaultValue>
        <label>2ml Green Requested N/A</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X2ml_Green_Returned__c</fullName>
        <label>2ml Green Returned</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2ml_Never_Share_Syringe_Dispensed__c</fullName>
        <label>2ml Never Share Syringe Dispensed</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2ml_Never_Share_Syringe_Requested_N_A__c</fullName>
        <defaultValue>false</defaultValue>
        <label>2ml Never Share Syringe Requested N/A</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X2ml_Never_Share_Syringe_Returned__c</fullName>
        <label>2ml Never Share Syringe Returned</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2ml_Orange_Dispensed__c</fullName>
        <label>2ml Orange Dispensed</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2ml_Orange_Requested_N_A__c</fullName>
        <defaultValue>false</defaultValue>
        <label>2ml Orange Requested N/A</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X2ml_Orange_Returned__c</fullName>
        <label>2ml Orange Returned</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2ml_Syringe_Dispensed__c</fullName>
        <label>2ml Syringe Dispensed</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2ml_Syringe_Requested_N_A__c</fullName>
        <defaultValue>false</defaultValue>
        <label>2ml Syringe Requested N/A</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X2ml_Syringe_Returned__c</fullName>
        <label>2ml Syringe Returned</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>